--- a/players/Makefile
+++ b/players/Makefile
@@ -2,28 +2,12 @@ CPPFLAGS= -std=c++11 -g
 CPP= c++
 
 COMMONOBJECTS= players.o
-RANDOMOBJECTS= ${COMMONOBJECTS} randomPlayer.o
-TIMEOUTOBJECTS=  ${COMMONOBJECTS} timeoutPlayer.o
-TOOACTIVEOBJECTS= ${COMMONOBJECTS} tooActivePlayer.o
-NONCHECKINGOBJECTS= ${COMMONOBJECTS} nonCheckingPlayer.o
 PLANNINGOBJECTS= planning.o
 GREEDYOBJECTS= ${COMMONOBJECTS} ${PLANNINGOBJECTS} greedyPlayer.o
 RANDOMPARAMETEROBJECTS= ${COMMONOBJECTS} ${PLANNINGOBJECTS} randomParameterPlayer.o
-TARGET= randomPlayer greedyPlayer timeoutPlayer tooActivePlayer nonCheckingPlayer randomParameterPlayer
+TARGET= greedyPlayer
 
 all: ${TARGET}
-
-randomPlayer: ${RANDOMOBJECTS}
-	${CPP} ${CPPFLAGS} -o $@ $^
-
-timeoutPlayer: ${TIMEOUTOBJECTS}
-	${CPP} ${CPPFLAGS} -pthread -o $@ $^
-
-tooActivePlayer: ${TOOACTIVEOBJECTS}
-	${CPP} ${CPPFLAGS} -o $@ $^
-
-nonCheckingPlayer: ${NONCHECKINGOBJECTS}
-	${CPP} ${CPPFLAGS} -o $@ $^
 
 greedyPlayer: ${GREEDYOBJECTS}
 	${CPP} ${CPPFLAGS} -o $@ $^
